--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -162,4 +162,4 @@ jobs:
           chown -R tester:wheel "${GITHUB_WORKSPACE}"/
 
           # Further work needs to be done in a sudo as we are changing user
-          sudo -i -u tester bash ci/openbsd_tests.sh
+          sudo -E -u tester bash ci/openbsd_tests.sh
