--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -150,6 +150,11 @@ jobs:
           # We need a file-descriptor file system to test test_ls::test_ls_io_errors
           # mount -t fdescfs fdesc /dev/fd
           #
+          set -e
+
+          REPO_NAME=${GITHUB_WORKSPACE##*/}
+          WORKSPACE_PARENT="/home/runner/work/${REPO_NAME}"
+          WORKSPACE="${WORKSPACE_PARENT}/${REPO_NAME}"
 
           # Generate random password for user
           PASSWD=$(encrypt $(openssl rand -base64 12))
@@ -158,8 +163,8 @@ jobs:
           whoami
 
           echo "## create non-root user and log into it"
-          useradd -d "${GITHUB_WORKSPACE}" -g wheel -c "Coreutils user for tests" -s $(which bash) -p ${PASSWD} tester
-          chown -R tester:wheel "${GITHUB_WORKSPACE}"/
+          useradd -d "${WORKSPACE}" -g wheel -c "Coreutils user for tests" -s $(which bash) -p ${PASSWD} tester
+          chown -R tester:wheel "${WORKSPACE}"/
 
           # Further work needs to be done in a sudo as we are changing user
           sudo -E -u tester bash ci/openbsd_tests.sh
