--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -164,7 +164,7 @@ jobs:
 
           echo "## create non-root user and log into it"
           useradd -d "${WORKSPACE}" -g wheel -c "Coreutils user for tests" -s $(which bash) -p ${PASSWD} tester
-          chown -R tester:wheel "${WORKSPACE}"/
+          chown -R tester:wheel /root/ "${WORKSPACE_PARENT}"/
 
           # Further work needs to be done in a sudo as we are changing user
           sudo -E -u tester bash ci/openbsd_tests.sh
