--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -108,4 +108,4 @@ jobs:
           chown -R tester:wheel /root/ "${WORKSPACE_PARENT}"/
 
           # Further work needs to be done in a sudo as we are changing user
-          sudo -i -u tester bash ci/openbsd_tests.sh
+          sudo -E -u tester bash ci/openbsd_tests.sh
