--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -45,7 +45,7 @@ jobs:
         # We need jq to run show-utils.sh and bash to use inline shell string replacement
         # install rust, rust-rustfmt and rust-clippy (version 1.90.0) from OpenBSD 7.8 release
         prepare: |
-          pkg_add -I coreutils curl sudo-1.9.17.2p1 jq bash
+          pkg_add -I coreutils curl sudo-- jq bash
           pkg_add -I rust rust-rustfmt rust-clippy
         run: |
           # Code inspired from rustup project https://github.com/rust-lang/rustup/blob/master/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
         copyback: true
         # install rust (version 1.90.0) from OpenBSD 7.8 release
         prepare: |
-          pkg_add -I coreutils curl jq sudo-1.9.17.2p1 bash
+          pkg_add -I coreutils curl jq sudo-- bash
           pkg_add -I rust zstd
         run: |
           # Code inspired from rustup project https://github.com/rust-lang/rustup/blob/master/.github/workflows/ci.yaml
